# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2021 Andy Holmes <andrew.g.r.holmes@gmail.com>

install_data('ca.andyholmes.valent.gschema.xml',
             'ca.andyholmes.valent.device.gschema.xml',
             'ca.andyholmes.valent.plugin.gschema.xml',
  install_dir: schemadir
)

