# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2021 Andy Holmes <andrew.g.r.holmes@gmail.com>

install_data('ca.andyholmes.Valent.gschema.xml',
             'ca.andyholmes.Valent.Device.gschema.xml',
             'ca.andyholmes.Valent.Plugin.gschema.xml',
  install_dir: schemadir
)

